--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "cnTareas": "User ID =postgres;Password=admin;Server=localhost;Port=5432;Database=TareasDB"
+  }
 }
